[package]
name = "kvs"
version = "0.1.0"
authors = ["Austin Mason <ammason12@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "^2.0.4"
criterion = "0.4.0"
predicates = "^2.1.1"
rand = "0.8.5"
tempfile = "^3.3.0"
walkdir = "^2.3.2"

[dependencies]
clap = { version = "^3.2.20", features = ["derive"] }
serde = { version = "^1.0.144", features = ["derive"] }
serde_json = "^1.0.85"
sled = "0.34.7"
log = "0.4.17"
stderrlog = "0.5.3"
rmp-serde = "^1.1.0"


[[bench]]
name = "benchmark"
harness = false
